--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,2 +1,66 @@
 @charset "UTF-8";
 
+*{
+   margin: 0px;
+   padding: 0px; 
+}
+
+html, body{
+   min-height: 100vh;
+   background-color: darkgray;
+
+}
+
+header{
+   background-color: black;
+   color: white;
+   text-align: center;
+}
+
+header > h1{
+   padding-top: 50px;
+   font-variant: small-caps;
+}
+
+header > p{
+   padding-bottom: 50px;
+}
+
+header a, footer a{
+   color: white;
+   text-decoration: none;
+   font-weight: bolder;
+}
+
+header a:hover, footer a:hover{
+   text-decoration: underline;
+}
+
+main section{
+   padding-top: 10vh;
+   padding-bottom: 10vh;
+   line-height: 2em;
+   padding-left: 30px;
+}
+
+main section.normal{
+   background-color: white;
+   color: black;
+}
+
+main section.imagem{
+   background-color: rgba(0, 0, 0, 0.637);
+   color: white;
+}
+
+main section.imagem > p{
+   width: 400px;
+   background-color: rgba(0, 0, 0, 0.39);
+}
+
+footer{
+   background-color: black;
+   color: white;
+   text-align: center;
+   padding: 10px;
+}
