--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -57,6 +57,10 @@ main section{
    font-size: 4vw;
 }
 
+main section > p{
+   padding-bottom: 2em;
+}
+
 main section.normal{
    background-color: white;
    color: black;
@@ -65,13 +69,30 @@ main section.normal{
 main section.imagem{
    background-color: rgba(0, 0, 0, 0.637);
    color: white;
+   box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.534);
+   background-size: cover;
+   background-attachment: fixed;
 }
 
 main section.imagem > p{
    display: inline-block;
    padding: 5px;
-   background-color: rgba(0, 0, 0, 0.39);
+   background-color: rgba(0, 0, 0, 0.514);
+   text-shadow: 1px 1px 0px black;
 }
+
+main section#img01{
+   background-image: url(../imagens/background001.jpg);
+   background-position: right center;
+   
+}
+
+main section#img02{
+   background-image: url(../imagens/background002.jpg);
+   background-position: right center;
+  
+}   
+
 
 footer{
    background-color: black;
